# quantopia

./: .gitignore  README.md
backend/: README.md  example_usage.py  pyproject.toml  run.sh
backend/logs/: 0367c435.json  04b8f533.json  45468459.json  47e9745a.json  4c5f803a.json  5365d0f4.json  59786da8.json  719c43fc.json  78da5569.json  a5eb1619.json  c889f444.json  e1393fb8.json  e15a0721.json  ec2b8e65.json  f127d805.json  f75407d4.json
backend/src/quantopia/: __init__.py  __main__.py  api.py  backtest.py  data_generator.py  logger.py  longport_client.py  strategy.py
backend/stock_data/fetch/: 0fe3c714.txt  1472525a.txt  23fa0a2e.txt  37052e3b.txt  3dcaf7b2.txt  476a5b13.txt  62c070f6.txt  7789036b.txt  8c47712a.txt  9b2745a1.txt  a43630e2.txt  c1c3487b.txt  d05cc2da.txt  dc791c19.txt  f415a7fe.txt  f5704525.txt
backend/stock_data/generate/: 0cbe51de.txt  3a85847b.txt  4c302f50.txt  528c0e00.txt  924dd655.txt  92debde0.txt  93950f59.txt  cba6c12d.txt
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DataChart.tsx  Layout.tsx
frontend/src/pages/: AccountManagement.tsx  BacktestDetail.tsx  BacktestManagement.tsx  DataManagement.tsx  FetchTaskDetail.tsx  Strategies.tsx  TradeManagement.tsx  TradeTaskDetail.tsx
frontend/src/services/: api.ts  strategies.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
